Bug 476443 -  Exception handling may be slow and use a lot of space (r=lhansen)