core/Exception.h
@@ -175,6 +175,9 @@ namespace avmplus
 		{
 			core = NULL;
 			this->catchAction = kCatchAction_Unknown;
+#if defined(AVMPLUS_MAC) && defined(DEBUG)
+			this->contextExtra = 0;
+#endif
 		}
 		~ExceptionFrame() { endTry(); }
 		void beginTry(AvmCore* core);
@@ -188,6 +191,10 @@ namespace avmplus
 	// ------------------------ DATA SECTION BEGIN
 	public:
 		jmp_buf				jmpbuf;
+#if defined(AVMPLUS_MAC) && defined(DEBUG)
+		// save and restore additional state alongside jmpbuf 
+		uint32_t                        contextExtra;
+#endif
 		AvmCore*			core;
 		ExceptionFrame*		prevFrame;
 		MethodFrame*		savedMethodFrame;
